fixing bg on small mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -670,9 +670,9 @@ hr{
     }
 
     /* fix it on deploy */
-    /* body{
-        background: #90a4ae;        
-    } */
+    body{
+        background-size: auto;        
+    }
 }
 
 
